@@ -47,6 +47,6 @@ android {
 }
 
 dependencies {
-  implementation 'androidx.core:core:1.0.0'
+  implementation 'androidx.core:core:1.0.2'
   testImplementation 'junit:junit:4.12'
 }
