@@ -52,6 +52,15 @@
         <data android:scheme="smallbasic" />
       </intent-filter>
     </activity>
+    <provider
+      android:name="androidx.core.content.FileProvider"
+      android:authorities="net.sourceforge.smallbasic.provider"
+      android:exported="false"
+      android:grantUriPermissions="true">
+      <meta-data
+        android:name="android.support.FILE_PROVIDER_PATHS"
+        android:resource="@xml/file_paths"/>
+    </provider>
   </application>
   <!-- Permissions -->
   <uses-permission android:name="android.permission.INTERNET" />
