@@ -1,0 +1,3 @@
+<paths>
+  <external-files-path name="shares" path="shares/" />
+</paths>
